--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <header>
-        <div>
-            <div>
-                <div>
+    <header class="jumbotron">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
                     <p>
                         We take inspiration from the World's best cuisines,
@@ -24,18 +24,18 @@
                         lipsmacking creations will tickle your culinary
                         senses!
                     </p>
-                </div>
+                </div class="col-12 col-sm">
                 <div></div>
             </div>
         </div>
     </header>
 
-    <div>
-        <div>
-            <div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div>
+            <div class="col col-sm order-sm-first col-md">
                 <h2>Uthappizza</h2>
                 <p>
                     A unique combination of Indian Uthappam (pancake) and
@@ -46,11 +46,11 @@
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="row">
+            <div class="col-12 col-sm-4  order-sm-last col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div>
+            <div class="col col-sm order-sm-first col-md">
                 <h2>Weekend Grand Buffet</h2>
                 <p>
                     Featuring mouthwatering combinations with a choice of
@@ -61,11 +61,11 @@
             </div>
         </div>
 
-        <div>
-            <div>
+        <div class="row">
+            <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div>
+            <div class="col col-sm order-sm-first col-md">
                 <h2>Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
                 <p>
@@ -79,9 +79,9 @@
     </div>
 
     <footer>
-        <div>
-            <div>
-                <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -90,7 +90,7 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
                         121, Clear Water Bay Road<br />
@@ -102,7 +102,7 @@
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
                 </div>
-                <div>
+                <div class="col-14 col-sm-4">
                     <div>
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
@@ -113,8 +113,8 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <div>
+            <div class="row">
+                <div class="col-auto">
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
             </div>
