--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="col-12 col-sm-4  order-sm-last col-md-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div class="col col-sm order-sm-first col-md">
+            <div class="col col-sm col-md">
                 <h2>Weekend Grand Buffet</h2>
                 <p>
                     Featuring mouthwatering combinations with a choice of
