--- a/aboutus.html
+++ b/aboutus.html
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link"><span class="fa fa-id-card"></span>
+                        <a href="./contactus.html" class="nav-link"><span class="fa fa-id-card"></span>
                             Contact</a>
                     </li>
                 </ul>
