--- a/contactus.html
+++ b/contactus.html
@@ -2,17 +2,18 @@
 <html lang="en">
 
 <head>
+
+    <title>Ristorante Con Fusion: About Us</title>
     <!-- Required meta tags always come first -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Ristorante Con Fusion</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,14 +22,13 @@
             <button class="navbar-toggler order-last" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a href="#" class="navbar-brand mr-auto">Ristorante con Fusion</a>
+            <a href="./index.html" class="navbar-brand mr-auto">Ristorante con Fusion</a>
             <div class="collapse navbar-collapse order-last" id="Navbar">
                 <ul class="navbar-nav mr-auto align-items-center">
-                    <li class="nav-item active"><a href="./index.html" class="nav-link "><span
-                                class="fa fa-home"></span>
+                    <li class="nav-item"><a href="./index.html" class="nav-link "><span class="fa fa-home"></span>
                             Home</a></li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link"><span class="fa fa-info"></span>
+                        <a href="./aboutus.html" class="nav-link"><span class="fa fa-info"></span>
                             About</a>
                     </li>
                     <li class="nav-item">
@@ -36,7 +36,7 @@
                             Menu
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="./contactus.html" class="nav-link"><span class="fa fa-id-card"></span>
                             Contact</a>
                     </li>
@@ -44,69 +44,75 @@
             </div>
         </div>
     </nav>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
-                    <p>
-                        We take inspiration from the World's best cuisines,
-                        and create a unique fusion experience. Our
-                        lipsmacking creations will tickle your culinary
-                        senses!
-                    </p>
-                </div class="col-12 col-sm">
-                <div></div>
+                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
+                        lipsmacking creations will tickle your culinary senses!</p>
+                </div>
+                <div class="col-12 col-sm">
+                </div>
             </div>
         </div>
     </header>
 
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col col-sm order-sm-first col-md">
-                <h2>Uthappizza</h2>
-                <p class="d-none d-sm-block">
-                    A unique combination of Indian Uthappam (pancake) and
-                    Italian pizza, topped with Cerignola olives, ripe vine
-                    cherry tomatoes, Vidalia onion, Guntur chillies and
-                    Buffalo Paneer.
-                </p>
+        <div class="row">
+            <ol class="col-12 breadcrumb">
+                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active">Contact Us</li>
+            </ol>
+            <div class="col-12">
+                <h3>Contact Us</h3>
+                <hr>
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4  order-sm-last col-md-3">
-                <h3>This Month's Promotions</h3>
+        <div class="row row-content">
+            <div class="col-12">
+                <h3>Location Information</h3>
             </div>
-            <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">
-                    Featuring mouthwatering combinations with a choice of
-                    five different salads, six enticing appetizers, six main
-                    entrees and five choicest desserts. Free flowing bubbly
-                    and soft drinks. All for just $19.99 per person
-                </p>
+            <div class="col-12 col-sm-4 offset-sm-1">
+                <h5>Our Address</h5>
+                <address style="font-size: 100%">
+                    121, Clear Water Bay Road<br>
+                    Clear Water Bay, Kowloon<br>
+                    HONG KONG<br>
+                    <i class="fa fa-phone"></i>: +852 1234 5678<br>
+                    <i class="fa fa-fax"></i>: +852 8765 4321<br>
+                    <i class="fa fa-envelope"></i>:
+                    <a href="mailto:confusion@food.net">confusion@food.net</a>
+                </address>
+            </div>
+            <div class="col-12 col-sm-6 offset-sm-1">
+                <h5>Map of our Location</h5>
+            </div>
+            <div class="col-12 col-sm-11 offset-sm-1">
+                <div class="btn-group" role="group">
+                    <a href="tel:+85212345678" class="btn btn-primary" role="button"><i class="fa fa-phone"></i>
+                        Call
+                    </a>
+                    <a href="" class="btn btn-info" role="button"><i class="fa fa-skype"></i> Skype</a>
+                    <a href="mailto:confusion@food.net" class="btn btn-success" role="button"><i
+                            class="fa fa-envelope"></i> Email</a>
+                </div>
             </div>
         </div>
 
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Meet our Culinary Specialists</h3>
+        <div class="row row-content">
+            <div class="col-12">
+                <h3>Send us your Feedback</h3>
             </div>
-            <div class="col col-sm order-sm-first col-md">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p class="d-none d-sm-block">
-                    Award winning three-star Michelin chef with wide
-                    International experience having worked closely with
-                    whos-who in the culinary world, he specializes in
-                    creating mouthwatering Indo-Italian fusion experiences.
-                </p>
+            <div class="col-12 col-md-9">
+                Form goes here
+            </div>
+            <div class="col-12 col-md">
             </div>
         </div>
+
     </div>
 
     <footer class="footer">
@@ -116,7 +122,7 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="./aboutus.html">About</a></li>
+                        <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
@@ -124,15 +130,16 @@
                 <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-                        121, Clear Water Bay Road<br />
-                        Clear Water Bay, Kowloon<br />
-                        HONG KONG<br />
-                        <i class="fa fa-phone"></i>: +852 1234 5678<br>
-                        <i class="fa fa-fax"></i>: +852 8765 4321<br>
-                        <i class="fa fa-envelope"></i>: <a href="mailto:confusion@food.net">confusion@food.net</a>
+                        121, Clear Water Bay Road<br>
+                        Clear Water Bay, Kowloon<br>
+                        HONG KONG<br>
+                        <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
+                        <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
+                        <i class="fa fa-envelope fa-lg"></i>:
+                        <a href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
                 </div>
-                <div class="col-14 col-sm-4 align-self-center">
+                <div class="col-12 col-sm-4 align-self-center">
                     <div class="text-center">
                         <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i
                                 class="fa fa-google-plus"></i></a>
