--- a/contactus.html
+++ b/contactus.html
@@ -2,22 +2,21 @@
 <html lang="en">
 
 <head>
-
     <title>Ristorante Con Fusion: About Us</title>
     <!-- Required meta tags always come first -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link href="css/style.css" rel="stylesheet" />
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
             <button class="navbar-toggler order-last" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
@@ -25,20 +24,20 @@
             <a href="./index.html" class="navbar-brand mr-auto">Ristorante con Fusion</a>
             <div class="collapse navbar-collapse order-last" id="Navbar">
                 <ul class="navbar-nav mr-auto align-items-center">
-                    <li class="nav-item"><a href="./index.html" class="nav-link "><span class="fa fa-home"></span>
-                            Home</a></li>
                     <li class="nav-item">
-                        <a href="./aboutus.html" class="nav-link"><span class="fa fa-info"></span>
-                            About</a>
+                        <a href="./index.html" class="nav-link"><span class="fa fa-home"></span> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link"> <span class="fa fa-list"></span>
+                        <a href="./aboutus.html" class="nav-link"><span class="fa fa-info"></span> About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link">
+                            <span class="fa fa-list"></span>
                             Menu
                         </a>
                     </li>
                     <li class="nav-item active">
-                        <a href="./contactus.html" class="nav-link"><span class="fa fa-id-card"></span>
-                            Contact</a>
+                        <a href="./contactus.html" class="nav-link"><span class="fa fa-id-card"></span> Contact</a>
                     </li>
                 </ul>
             </div>
@@ -50,11 +49,14 @@
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
-                        lipsmacking creations will tickle your culinary senses!</p>
+                    <p>
+                        We take inspiration from the World's best cuisines,
+                        and create a unique fusion experience. Our
+                        lipsmacking creations will tickle your culinary
+                        senses!
+                    </p>
                 </div>
-                <div class="col-12 col-sm">
-                </div>
+                <div class="col-12 col-sm"></div>
             </div>
         </div>
     </header>
@@ -62,12 +64,14 @@
     <div class="container">
         <div class="row">
             <ol class="col-12 breadcrumb">
-                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item">
+                    <a href="./index.html">Home</a>
+                </li>
                 <li class="breadcrumb-item active">Contact Us</li>
             </ol>
             <div class="col-12">
                 <h3>Contact Us</h3>
-                <hr>
+                <hr />
             </div>
         </div>
 
@@ -78,11 +82,11 @@
             <div class="col-12 col-sm-4 offset-sm-1">
                 <h5>Our Address</h5>
                 <address style="font-size: 100%">
-                    121, Clear Water Bay Road<br>
-                    Clear Water Bay, Kowloon<br>
-                    HONG KONG<br>
-                    <i class="fa fa-phone"></i>: +852 1234 5678<br>
-                    <i class="fa fa-fax"></i>: +852 8765 4321<br>
+                    121, Clear Water Bay Road<br />
+                    Clear Water Bay, Kowloon<br />
+                    HONG KONG<br />
+                    <i class="fa fa-phone"></i>: +852 1234 5678<br />
+                    <i class="fa fa-fax"></i>: +852 8765 4321<br />
                     <i class="fa fa-envelope"></i>:
                     <a href="mailto:confusion@food.net">confusion@food.net</a>
                 </address>
@@ -107,12 +111,67 @@
                 <h3>Send us your Feedback</h3>
             </div>
             <div class="col-12 col-md-9">
-                Form goes here
-            </div>
-            <div class="col-12 col-md">
+                <form action="">
+                    <div class="form-group row">
+                        <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+                        <div class="col">
+                            <input id="firstname" type="text" class="form-control" placeholder="First Name" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input id="lastname" type="text" class="form-control" placeholder="Last Name" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="telnum" class="col-12 col-md-2 col-form-label">Contact Tel.</label>
+                        <div class="col-5 col-md-3">
+                            <input id="areacode" type="text" class="form-control" placeholder="Area Code" />
+                        </div>
+                        <div class="col-7 col-md-7">
+                            <input id="telnum" name="telnum" type="tel" class="form-control"
+                                placeholder="Tel. Number" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="email" class="col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input id="emailid" name="emailid" type="text" class="form-control" placeholder="Email" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-6 offset-md-2">
+                            <div class="form-check">
+                                <input type="checkbox" id="approve" class="form-check-input" name="approve"
+                                    value="" /><label for="approve" class="form-check-label"><strong>May we contact
+                                        your</strong></label>
+                            </div>
+                        </div>
+                        <div class="col-md-3 offset-md-1">
+                            <select name="" id="" class="form-control">
+                                <option value="">Tel.</option>
+                                <option value="">Email</option>
+                            </select>
+                        </div>
+                    </div>
+                        
+                    <div class="form-group row">
+                        <label for="feedback" class="col-md-2 col-form-label">Your Feedback</label>
+                        <div class="col-md-10">
+                            <textarea id="feedback" name="feedback" class="form-control" rows="12"></textarea>
+                        </div>
+                    </div><div class="form-group row">
+                        <div class="offset-md-2 col md-10">
+                            <button type="submit" class="btn btn-primary">Send Feedback</button>
+                        </div>
+                    </div>
+
+                </form>
             </div>
         </div>
-
+        <div class="col-12 col-md"></div>
+    </div>
     </div>
 
     <footer class="footer">
@@ -130,11 +189,11 @@
                 <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-                        121, Clear Water Bay Road<br>
-                        Clear Water Bay, Kowloon<br>
-                        HONG KONG<br>
-                        <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
-                        <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
+                        121, Clear Water Bay Road<br />
+                        Clear Water Bay, Kowloon<br />
+                        HONG KONG<br />
+                        <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br />
+                        <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br />
                         <i class="fa fa-envelope fa-lg"></i>:
                         <a href="mailto:confusion@food.net">confusion@food.net</a>
                     </address>
