--- a/aboutus.html
+++ b/aboutus.html
@@ -80,7 +80,9 @@
 							senses!
 						</p>
 					</div>
-					<div class="col-12 col-sm"></div>
+					<div class="col-12 col-sm align-self-center">
+						<img src="./img/logo.png" alt="" />
+					</div>
 				</div>
 			</div>
 		</header>
