--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
 						/>
 						<div class="media-body">
 							<h2 class="mt-0">Uthappizza</h2>
+							<span class="badge badge-danger">HOT</span>
+							<span class="badge badge-pill badge-secondary"
+								>$4.99</span
+							>
 							<p class="d-none d-sm-block">
 								A unique combination of Indian Uthappam
 								(pancake) and Italian pizza, topped with
