--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							>
 						</li>
 						<li class="nav-item">
-							<a href="#" class="nav-link"
+							<a href="./aboutus.html" class="nav-link"
 								><span class="fa fa-info"></span> About</a
 							>
 						</li>
