--- a/index.html
+++ b/index.html
@@ -68,9 +68,84 @@
 							>
 						</li>
 					</ul>
+					<span class="navbar-text"
+						><a data-toggle="modal" data-target="#loginModal"
+							><span class="fa fa-sign-in"></span>Login</a
+						></span
+					>
 				</div>
 			</div>
 		</nav>
+
+		<div id="loginModal" class="modal fade" role="dialog">
+			<div class="modal-dialog modal-lg" role="content">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h4 class="modal-title">Login</h4>
+						<button
+							type="button"
+							class="close"
+							data-dismiss="modal"
+						>
+							X
+						</button>
+					</div>
+					<div class="modal-body">
+						<form action="">
+							<div class="form-row">
+								<div class="form-group col-sm-4">
+									<label
+										for="exampleInputEmail"
+										class="sr-only"
+										>Email</label
+									><input
+										type="email"
+										class="form-control"
+										id="exampleInputEmail"
+										placeholder="Email"
+									/>
+								</div>
+								<div class="form-group col-sm-4">
+									<label
+										for="exampleInputPassword"
+										class="sr-only"
+										>Password</label
+									><input
+										type="password"
+										class="form-control"
+										id="exampleInputPassword"
+										placeholder="Password"
+									/>
+								</div>
+								<div class="col-sm-auto">
+									<div class="form-check">
+										<input
+											type="checkbox"
+											class="form-check-input"
+										/>Remember me<label
+											for=""
+											class="form-check-label"
+										></label>
+									</div>
+								</div>
+							</div>
+							<div class="form-row">
+								<button
+									class="btn btn-secondary btn-sm ml-auto"
+									data-dimmiss="modal"
+								>
+									Cancel
+								</button>
+								<button class="btn btn-primary btn-sm ml-1">
+									Sign in
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<header class="jumbotron">
 			<div class="container">
 				<div class="row row-header">
@@ -90,6 +165,10 @@
 						<a
 							href="#reserve-form"
 							class="btn btn-warning col col-sm-6"
+							data-toggle="tooltip"
+							data-html="true"
+							title="Or Call us at <br><strong>+852 12345678</strong>"
+							data-placement="bottom"
 							>Reserve Table</a
 						>
 					</div>
@@ -383,5 +462,6 @@
 		<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 		<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="./js/tooltip-integrator.js"></script>
 	</body>
 </html>
