--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
 			rel="stylesheet"
 			href="node_modules/bootstrap-social/bootstrap-social.css"
 		/>
-		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="stylesheet" href="./css/styles.css" />
 		<title>Ristorante Con Fusion: About Us</title>
 	</head>
 
