--- a/index.html
+++ b/index.html
@@ -458,20 +458,12 @@
 							data-slide="next"
 							><span class="carousel-control-next-icon"></span
 						></a>
-						<div class="btn-group" id="carouselButton">
-							<button
-								class="btn btn-danger btn-sm"
-								id="carousel-pause"
-							>
-								<span class="fa fa-pause"></span>
-							</button>
-							<button
-								class="btn btn-danger btn-sm"
-								id="carousel-play"
-							>
-								<span class="fa fa-play"></span>
-							</button>
-						</div>
+						<button
+							class="btn btn-danger btn-sm"
+							id="carouselButton"
+						>
+							<span class="fa fa-pause"></span>
+						</button>
 					</div>
 				</div>
 			</div>
@@ -637,12 +629,32 @@
 			$(document).ready(() => {
 				$("#myCarousel").carousel({ interval: 2000 });
 
-				$("#carousel-pause").click(() => {
-					$("#myCarousel").carousel("pause");
-				});
-
-				$("#carousel-play").click(() => {
-					$("#myCarousel").carousel("cycle");
+				$("#carouselButton").click(() => {
+					if (
+						$("#carouselButton")
+							.children("span")
+							.hasClass("fa-pause")
+					) {
+						$("#myCarousel").carousel("pause");
+						$("#carouselButton")
+							.children("span")
+							.removeClass("fa-pause");
+						$("#carouselButton")
+							.children("span")
+							.addClass("fa-play");
+					} else if (
+						$("#carouselButton")
+							.children("span")
+							.hasClass("fa-play")
+					) {
+						$("#myCarousel").carousel("cycle");
+						$("#carouselButton")
+							.children("span")
+							.removeClass("fa-play");
+						$("#carouselButton")
+							.children("span")
+							.addClass("fa-pause");
+					}
 				});
 			});
 		</script>
