--- a/index.html
+++ b/index.html
@@ -616,62 +616,6 @@
 		<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
 		<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
 		<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script>
-			$(document).ready(() => {
-				$("#myCarousel").carousel({ interval: 2000 });
-
-				//Modal handlers
-
-				// Modal Reserve Form
-				$("#buttonReserve").click(() => {
-					$("#formModal").modal("toggle");
-				});
-
-				//Modal Login
-
-				$("#linkLogin").click(() => {
-					$("#loginModal").modal("toggle");
-				});
-
-				//Close Modal
-
-				$(".close").click(() => {
-					$(".modal").modal("hide");
-				});
-
-				$("[type=close]").click(() => {
-					$(".modal").modal("hide");
-				});
-
-				// Carousel Handler
-				$("#carouselButton").click(() => {
-					if (
-						$("#carouselButton")
-							.children("span")
-							.hasClass("fa-pause")
-					) {
-						$("#myCarousel").carousel("pause");
-						$("#carouselButton")
-							.children("span")
-							.removeClass("fa-pause");
-						$("#carouselButton")
-							.children("span")
-							.addClass("fa-play");
-					} else if (
-						$("#carouselButton")
-							.children("span")
-							.hasClass("fa-play")
-					) {
-						$("#myCarousel").carousel("cycle");
-						$("#carouselButton")
-							.children("span")
-							.removeClass("fa-play");
-						$("#carouselButton")
-							.children("span")
-							.addClass("fa-pause");
-					}
-				});
-			});
-		</script>
+		<script src="./js/scripts.js"></script>
 	</body>
 </html>
